не помню что делал но что-то делал далее буду переписывать